lld/test/error-atom-attribute.objtxt
# RUN: not lld-core %s 2> %t.err
# RUN:   FileCheck < %t.err %s

#
# Test that unknown atom attribute produces a readable error.
#

---
atoms:
    - name:         entry
      scope:        hidden
      foobar:       true
      dead-strip:   never
  
...


# CHECK:       error: Unknown atom attribute
# CHECK:       foobar
